--- a/web/package.json
+++ b/web/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "next": "14.2.6",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "xlsx": "^0.19.3"
   },
   "devDependencies": {
     "@types/node": "^20.11.30",
@@ -24,4 +25,3 @@
     "typescript": "^5.4.5"
   }
 }
-
