API 키 및 관리자 토큰 관련 기능 추가: 환경 변수 업데이트, 인증 헤더 처리 및 테넌트 확인 로직 구현

--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,5 @@
 DATABASE_URL=sqlite:///./dev.db
 DEFAULT_TENANT=demo
 TZ=Asia/Seoul
-
+ADMIN_TOKEN=changeme-admin-token
+API_KEY_PEPPER=optional-pepper-string
