--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@
 DATABASE_URL=sqlite:///./dev.db
 DEFAULT_TENANT=demo
 TZ=Asia/Seoul
+ADMIN_TOKEN=BAab7sr57uuamABMQOdyqJNPBNWu06xIJBcFeEcXSyg
+API_KEY_PEPPER=HYC_wjGRSXGW4_aA-5FOhwmK9Ig48Mxsa2VsGhMYfdIZ1IZvcKNaN1S5F4dnV5OM
