인증 기능 추가: 사용자 가입 및 로그인 API 구현, 세션 토큰 생성 및 검증 로직 추가

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ DEFAULT_TENANT=demo
 TZ=Asia/Seoul
 ADMIN_TOKEN=changeme-admin-token
 API_KEY_PEPPER=optional-pepper-string
+AUTH_SECRET=dev-auth-secret
