회원가입 페이지 개선: 대학 및 학과 선택을 위한 입력 필드를 드롭다운에서 자동 완성 입력으로 변경, tsconfig.json에 경로 별칭 추가

--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -23,7 +23,14 @@
       }
     ],
     "forceConsistentCasingInFileNames": true,
-    "baseUrl": "."
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./*"],
+      "@app/*": ["app/*"],
+      "@components/*": ["components/*"],
+      "@lib/*": ["lib/*"]
+    },
+    "ignoreDeprecations": "6.0"
   },
   "include": [
     "next-env.d.ts",
