환경 설정 업데이트: .env.example에 클라우드 MySQL 연결 예시 추가 및 README에 클라우드 배포 준비 체크리스트 추가, requirements.txt에 pymysql 드라이버 추가, GCP 배포 준비 문서 생성

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 # Backend
+# DATABASE_URL can point to local sqlite or cloud mysql (example below)
 DATABASE_URL=sqlite:///./dev.db
+# DATABASE_URL=mysql+pymysql://user:password@host:3306/timora?charset=utf8mb4
 DEFAULT_TENANT=demo
 TZ=Asia/Seoul
 ADMIN_TOKEN=changeme-admin-token
