TIMETABLE_SESSION_TOKEN 자동 발급 스크립트 추가 및 환경 변수 업데이트

--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ DEFAULT_TENANT=demo
 TZ=Asia/Seoul
 ADMIN_TOKEN=BAab7sr57uuamABMQOdyqJNPBNWu06xIJBcFeEcXSyg
 API_KEY_PEPPER=HYC_wjGRSXGW4_aA-5FOhwmK9Ig48Mxsa2VsGhMYfdIZ1IZvcKNaN1S5F4dnV5OM
+TIMETABLE_SESSION_TOKEN=
+AUTH_SECRET=
