--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,9 @@ TZ=Asia/Seoul
 ADMIN_TOKEN=changeme-admin-token
 API_KEY_PEPPER=optional-pepper-string
 AUTH_SECRET=dev-auth-secret
+# Optional: seed service token automatically (see scripts/bootstrap_service_token.py)
+SERVICE_ACCOUNT_EMAIL=
+SERVICE_ACCOUNT_PASSWORD=
+SERVICE_ACCOUNT_UNIVERSITY=Demo University
+SERVICE_ACCOUNT_DEPARTMENT=
+TIMETABLE_SESSION_TOKEN=
